# equity-strategy-research

./: .gitignore  README.md  README_STRATEGY_COMPARISON.md  pyproject.toml
configs/: baseline_strategy.json
configs/experiments/: baseline_control.json  method1_schedule_hybrid.json  method2_no_trade_band.json  method4_beta_target_overlay.json
data/: .gitkeep  tickers.txt
reports/output/: metrics.json  report.html  trades.csv
src/strategy/: __init__.py  analysis.py  backtest.py  config.py  data.py  execution.py  features.py  gates.py  main.py  metrics.py  portfolio.py  rank.py  reporting.py  universe.py  validation.py  wandb_utils.py
tests/: test_analysis.py  test_backtest.py  test_data.py  test_execution.py  test_features.py  test_gates.py  test_metrics.py  test_portfolio.py  test_rank.py  test_reporting.py  test_universe.py  test_validation.py  test_wandb_utils.py
