[project]
name = "equity-strategy"
version = "0.1.0"
description = "Daily gated, ranked-allocation equity strategy research repository"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Gautam Marathe"}
]

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "yfinance>=0.2.30",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pyarrow>=14.0.0",  # For parquet support
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]
tracking = [
    "wandb>=0.17.0",
    "plotly>=6.0.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
